added: Turkish (partial) translation changed: Hindi, Dutch, and Spanish translations

--- a/locales/src/es/translation.json
+++ b/locales/src/es/translation.json
@@ -303,10 +303,12 @@
         "he": "Hebreo",
         "hi": "Hindi",
         "it": "Italiano",
+        "ka": "Georgiano",
         "km": "Khmer",
         "lo": "Lao",
         "nl": "Holandés",
         "no": "Noruego",
+        "pa": "Panjabi",
         "pl": "Polaco",
         "pt": "Portugués",
         "ro": "Rumano",
