--- a/locales/src/nl/translation.json
+++ b/locales/src/nl/translation.json
@@ -303,10 +303,12 @@
         "he": "Hebreeuws",
         "hi": "Hindi",
         "it": "Italiaans",
+        "ka": "Georgisch",
         "km": "Khmer",
         "lo": "Laotiaans",
         "nl": "Nederlands",
         "no": "Noorweegs",
+        "pa": "Punjabi",
         "pl": "Pools",
         "pt": "Portugees",
         "ro": "Roemeens",
