changed: updated Dutch and Swedish translations

--- a/locales/src/nl/translation.json
+++ b/locales/src/nl/translation.json
@@ -319,6 +319,7 @@
         "sv": "Zweeds",
         "sw": "Swahili",
         "th": "Thai",
+        "tr": "Turks",
         "vi": "Vietnamees",
         "zh": "Chinees"
     },
