--- a/locales/src/sv/translation.json
+++ b/locales/src/sv/translation.json
@@ -303,10 +303,12 @@
         "he": "Hebreiska",
         "hi": "Hindi",
         "it": "Italienska",
+        "ka": "georgiska",
         "km": "Khmer",
         "lo": "Laotiska",
         "nl": "Nederländska",
         "no": "Norska",
+        "pa": "panjabi",
         "pl": "Polska",
         "pt": "Portugisiska",
         "ro": "Rumänska",
@@ -317,6 +319,7 @@
         "sv": "Svenska",
         "sw": "Swahili",
         "th": "Thailändska",
+        "tr": "turkiska",
         "vi": "Vietnamesiska",
         "zh": "Kinesiska"
     },
