fixed: the "selected" message in the desktop select picker does not switch language immediately, closes #177

--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -276,7 +276,8 @@
         "longitude": "longitude (x.y °)",
         "points": "points",
         "removePoint": "This will completely remove the current geopoint from the list of geopoints and cannot be undone. Are you sure you want to do this?",
-        "searchPlaceholder": "search for place or address"
+        "searchPlaceholder": "search for place or address",
+        "bordersintersectwarning": "Borders cannot intersect"
     },
     "here": "here",
     "hint": {
