--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -381,7 +381,7 @@
         }
     },
     "submission": {
-        "http0": "Failed (Offline?).",
+        "http0": "Submission failed due to no internet connection. Your data will not be lost. Please try again.",
         "http2xx": "Unexpected response when submitting data.",
         "http400": "Data server did not accept data.",
         "http401": "Authentication problem with data server.",
