--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -215,7 +215,7 @@
     "error": {
         "code": "Error Code: __code__",
         "dataloadfailed": "Failed to load data from __url__",
-        "econnrefused": "Could not connect with Server",
+        "econnrefused": "Could not connect with Form Server",
         "encryptionnotsupported": "This form requires local encryption of records. Unfortunately this is not supported by your browser. We recommend switching to a modern browser.",
         "instancenotfound": "Record not present. It may have expired.",
         "invalidediturl": "Not a valid edit URL",
