--- a/locales/src/nl/translation.json
+++ b/locales/src/nl/translation.json
@@ -215,7 +215,7 @@
     "error": {
         "code": "Fout Code: __code__",
         "dataloadfailed": "Kon data niet laden van __url__",
-        "econnrefused": "Kon niet verbinden met de Server",
+        "econnrefused": "Kon niet verbinden met de Form Server",
         "encryptionnotsupported": "Voor dit formulier is lokale codering van records vereist. Helaas wordt dit niet ondersteund door uw browser. We raden aan over te schakelen naar een moderne browser.",
         "instancenotfound": "Record niet gevonden. Het kan verlopen zijn.",
         "invalidediturl": "Niet een geldig edit URL",
